<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/productnameview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/descriptionview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/costview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_cost"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/rrpview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_rrp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Spinner
        android:id="@+id/productspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="#514F4F"
        android:text="@string/create"
        android:textColor="#FFFFFF" />

</LinearLayout>